Fix style and text

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -55,3 +55,10 @@ div.bot-chat-sm p {
 .bot-commands dd {
   color: #999;
 }
+
+@media screen and (max-width: 768px) {
+  .bot-commands dt,
+  .bot-commands dd {
+    width: 100%;
+  }
+}
